--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,4 +10,23 @@ nav {
 	padding-top: 0px;
 	background: none;
 	transition: all 0.6s cubic-bezier(0.7,0.01,0.3,1); 
+	/*background-color: red;*/
+}
+
+.logo,
+.menu{
+	position: absolute;
+	z-index: 2000;
+}
+
+.logo{
+	left: 0;
+	top: -4px;
+	width: 70px;
+	height: 74px;
+	padding:0.4% 2%;
+	text-align: left;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-image: url(../img/icon/logo.png);
 }
