--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,10 +33,30 @@ nav {
 
 .menu{
 	top: 0;
+	bottom: 0;
 	right: 0;
 	height: 4px;
 	width: 24px;
 	text-align: right;
 	margin: 2rem 2rem;
-	background:all 0.3s;
+	background: #ec009c;
+	transition: all 0.3s;
+}
+
+.menu:before, .menu:after{
+	content: "";
+	display: block;
+	width: 24px;
+	height: 4px;
+	background: #ec008c;
+	position: absolute;
+	z-index: 1;
+}
+
+.menu:before{
+	top: -8px;
+}
+
+.menu:after{
+	top: 8px;
 }
