--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ nav {
 	height: 4px;
 	background: #ec008c;
 	position: absolute;
-	z-index: 1;
+	z-index: -1;
 }
 
 .menu:before{
@@ -83,13 +83,7 @@ nav {
 
 .open .menu{
 	background: none !important;
-	height: 4px;
-	width: 24px;
 }
-
-/*.open{
-	background:#ec008c; 
-}*/
 
 .open .menu:after{
 	top: 0 !important;
@@ -102,4 +96,98 @@ nav {
 	top: 0 !important;
 	background: #fff !important;
 	transform: rotate(-45deg);
+}
+
+nav .nav-background{
+	top: 0px;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	z-index:1500;
+	display: table;
+	background: none;
+	position: absolute;
+	transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+}
+
+nav.open .nav-background{
+	opacity: 1;
+	background-color: rgba(217,40,130,0.9) !important;
+	transition: background-color 0.6s cubic-bezier(0.7, 0.01, 0.3, 1);
+}
+
+nav.open {
+    height: 100%;
+    transition: none;
+    -o-transition: none;
+    -moz-transition: none;
+    -webkit-transition: none;
+}
+
+nav ul{
+	top: -10%;
+	padding: 0;
+	opacity: 0;
+	width: 100%;
+	text-align: center;
+	visibility: hidden;
+	display: table-cell;
+	vertical-align: middle;
+	transform: perspective(600px) rotateX(10deg);
+	transition: all 0.5s cubic-bezier(0.7, 0, 0.36, 0.63);
+}
+
+nav ul li{
+	visibility: hidden;
+}
+
+nav ul li a{
+	color: white;
+	width: 100%;
+	display: block;
+	padding: 8px 0 0;
+	letter-spacing: -0.06em;
+}
+
+nav ul li a:hover{
+	color:#ec008c;
+	background-color: white;
+}
+
+nav.open ul{
+	top: 0;
+	opacity: 1;
+	margin-top: 0;
+	visibility: visible;
+	transform: perspective(600px) rotateX(0deg);
+}
+
+nav.open ul li {
+	color: #fff;
+	font-size: 60px;
+	visibility: visible !important;
+}
+
+nav.header-in{
+	background-color:rgba(217,40,130,0.9);
+}
+
+.solid #toggle .menu{
+	background: #fff;
+}
+
+.solid #toggle .menu:after{
+	background-color: #fff;
+}
+
+.solid #toggle .menu:before{
+	background-color: #fff;
+}
+
+nav.solid #logo .logo{
+	background-image: url(../img/icon/logo_white.png);
+}
+
+.overflow-hidden{
+	overflow: hidden;
 }
