hasta ahi funciona

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,13 +32,12 @@ nav {
 
 .menu{
 	top: 0;
-	bottom: 0;
 	right: 0;
 	height: 4px;
 	width: 24px;
 	text-align: right;
 	margin: 2rem 2rem;
-	background: #ec009c;
+	background: #ec008c;
 	transition: all 0.3s;
 }
 
@@ -61,9 +60,9 @@ nav {
 }
 
 #toggle{
-	width: 104px;
-	height: 74px;
-	padding: 45px 40px;
+	width: 88px;
+	height: 64px;
+	/*padding: 45px 40px;*/
 	z-index: 1000;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
@@ -97,7 +96,7 @@ nav {
 	background: #fff !important;
 	transform: rotate(-45deg);
 }
-
+/*
 nav .nav-background{
 	top: 0px;
 	opacity: 0;
@@ -133,6 +132,7 @@ nav ul{
 	visibility: hidden;
 	display: table-cell;
 	vertical-align: middle;
+	visibility: hidden;
 	transform: perspective(600px) rotateX(10deg);
 	transition: all 0.5s cubic-bezier(0.7, 0, 0.36, 0.63);
 }
@@ -168,12 +168,13 @@ nav.open ul li {
 	visibility: visible !important;
 }
 
+
 nav.header-in{
 	background-color:rgba(217,40,130,0.9);
 }
 
 .solid #toggle .menu{
-	background: #fff;
+	background: #ec008c;
 }
 
 .solid #toggle .menu:after{
@@ -190,4 +191,4 @@ nav.solid #logo .logo{
 
 .overflow-hidden{
 	overflow: hidden;
-}
+}*/
