--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 nav {
 	top: 0;
 	left: 0;
@@ -60,8 +61,8 @@ nav {
 }
 
 #toggle{
-	width: 88px;
-	height: 64px;
+	width: 104px;
+	height: 74px;
 	padding: 45px 40px;
 	z-index: 1000;
 	background-position: 50% 50%;
@@ -100,7 +101,7 @@ nav {
 
 
 nav.nav-background{
-	top: 0px;
+	top: 0;
 	opacity: 0;
 	width: 100%;
 	height: 100%;
@@ -129,12 +130,11 @@ nav.open {
 
 nav ul{
 	top: -10%;
-	padding: 0;
+	padding: 70px 0 0 0;
 	opacity: 0;
 	width: 100%;
 	text-align: center;
 	visibility: hidden;
-	display: table-cell;
 	vertical-align: middle;
 	visibility: hidden;
 	transform: perspective(600px) rotateX(10deg);
@@ -151,13 +151,17 @@ nav ul li a{
 	display: block;
 	padding: 8px 0 0;
 	letter-spacing: -0.06em;
-
+	text-decoration: none;
 }
 
 nav ul li a:hover{
 	color:#ec008c;
 	background-color: white;
 
+}
+
+nav.open .logo{
+	background-image: url(../img/icon/logo_white.png);
 }
 
 nav.open ul{
@@ -178,6 +182,7 @@ nav.open ul li {
 
 nav.header-in{
 	background-color:rgba(217,40,130,0.9);
+
 }
 
 .solid #toggle .menu{
